# uuid_v8

./: .aiexclude  .gitignore  .versionrc.json  CHANGELOG.md  CMakeLists.txt  README.md  package-lock.json  package.json  pre-commit.in  uuid_v8.hpp.in
include/uuid_v8/: uuid_v8.hpp
scripts/: pre-commit.sh
tests/: test_uuid_v8.cpp
